# mlops-lab1

./: .dockerignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  inference.py  main.py  model.joblib  public_key.asc  pyproject.toml  secrets.yaml  settings.py  test_app.py  training.py
config/: .env.dev  .env.prod  .env.test
tests/: test_settings.py
